--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,10 @@
             "use": "@vercel/node"
         }
     ],
-    "rewrites": [
-        { "source": "/api/(.*)", "destination": "/api" },
-        { "source": "/(.*)", "destination": "/index.html" }
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "./index.js"
+        }
     ]
 }
